--- a/component_calling_host_calling_plugins/custom_plugin/Cargo.toml
+++ b/component_calling_host_calling_plugins/custom_plugin/Cargo.toml
@@ -4,13 +4,16 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }
+wit-bindgen-rt = { version = "0.43", features = ["bitflags"] }
 plugin_api={path="../plugin_api"}
 
 [lib]
 crate-type = ["cdylib"]
 
 [package.metadata.component]
-package = "example:parse-plugin"
+package = "example:pluggable"
+
+[package.metadata.component.target]
+world = "plugin"
 
 [package.metadata.component.dependencies]
