--- a/component_calling_host_calling_plugins/pluggable/Cargo.toml
+++ b/component_calling_host_calling_plugins/pluggable/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-#wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }
-wit-bindgen = "0.42.1"
+#wit-bindgen-rt = { version = "0.43", features = ["bitflags"] }
+wit-bindgen = "0.43"
+plugin_api={path="../plugin_api"}
 
 [lib]
 crate-type = ["cdylib"]
